
0.01 2020-10-13
  - Resurrect plugin and reset version.

0.02 2020-10-21
  - Optimize models and interface load.
  - MojoX::Model::Complex for easy compose SQL.
