@@ -6,8 +6,6 @@ use Test::Mojo;
 use_ok('MojoX::Model');
 use_ok('MojoX::Model::Complex');
 use_ok('MojoX::Models');
-use_ok('Mojolicious::LazyController');
-use_ok('Mojolicious::LazyCommand');
 use_ok('Mojolicious::Plugin::LazyModels');
 
 done_testing;
